--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodemon",
+  "name": "node",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/KimJongHyuck/nodeJS.git",
